test/cases/compile_errors/variable_missing_value.zig
const a;
const b: u32;

var c;
var d: u32;
// error
//
// :1:1: error: variables must be initialized
// :2:1: error: variables must be initialized
// :4:1: error: variables must be initialized
// :5:1: error: variables must be initialized
